--- a/quiz 2.html
+++ b/quiz 2.html
@@ -25,14 +25,14 @@
             <img src="flower1.jpg" alt="Beautiful Flower 1">
             <h2>Beautiful Flower Arrangement 1</h2>
             <p>Surprise your loved ones with this stunning flower arrangement.</p>
-            <a href="https://www.external-link1.com" class="btn">Buy Now</a>
+            <a href="https://www.example.com" class="btn">Buy Now</a>
         </div>
         
         <div class="product">
             <img src="gift1.jpg" alt="Gift 1">
             <h2>Special Gift Item 1</h2>
             <p>Find the perfect gift for any occasion.</p>
-            <a href="https://www.external-link2.com" class="btn">View Details</a>
+            <a href="https://www.example.com" class="btn">View Details</a>
         </div>
     </section>
     
